objects/zisf__ZoomInfo__c.object
<CustomObject>
    <description>The ZoomInfo object stores all Person and Company data for the associated Lead, Contact, or Account.</description>
    <fields>
        <fullName>zisf__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated account.</description>
        <inlineHelpText>Associated account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ZoomInfo</relationshipLabel>
        <relationshipName>ZoomInfo_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zisf__Calculated_Job_Function__c</fullName>
        <description>Inferred Job Function Based on the Title Input Parameter.</description>
        <inlineHelpText>Inferred Job Function Based on the Title Input Parameter.</inlineHelpText>
        <label>Calculated Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Calculated_Management_Level__c</fullName>
        <description>Inferred Management Level Based on Title Input Parameter.</description>
        <inlineHelpText>Inferred Management Level Based on Title Input Parameter.</inlineHelpText>
        <label>Calculated Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_City__c</fullName>
        <description>Company HQ city address.</description>
        <inlineHelpText>Company HQ city address.</inlineHelpText>
        <label>Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Country__c</fullName>
        <description>Company HQ country address.</description>
        <inlineHelpText>Company HQ country address.</inlineHelpText>
        <label>Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Description__c</fullName>
        <description>Description of business.</description>
        <inlineHelpText>Description of business.</inlineHelpText>
        <label>Company Description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Employee_Count__c</fullName>
        <description>Employee count for Company.</description>
        <inlineHelpText>Employee count for Company.</inlineHelpText>
        <label>Company Employee Count</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Employee_Range__c</fullName>
        <description>Employee Range for Company.</description>
        <inlineHelpText>Employee Range for Company.</inlineHelpText>
        <label>Company Employee Range</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Fax__c</fullName>
        <description>Company HQ Fax number.</description>
        <inlineHelpText>Company HQ Fax number.</inlineHelpText>
        <label>Company Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Industry__c</fullName>
        <description>Industry of Company.</description>
        <inlineHelpText>Industry of Company.</inlineHelpText>
        <label>Company Industry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Is_Defunct__c</fullName>
        <description>Flag to determine whether company is defunct.</description>
        <inlineHelpText>Flag to determine whether company is defunct.</inlineHelpText>
        <label>Company Is Defunct</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_NAICS_Codes__c</fullName>
        <description>List of NAICS codes associated with company.</description>
        <inlineHelpText>List of NAICS codes associated with company.</inlineHelpText>
        <label>Company NAICS Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Name__c</fullName>
        <description>Name of business.</description>
        <inlineHelpText>Name of business.</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Parent_ID__c</fullName>
        <description>ZoomInfo ID of Parent company.</description>
        <inlineHelpText>ZoomInfo ID of Parent company.</inlineHelpText>
        <label>Company Parent ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Parent_Name__c</fullName>
        <description>Name of Parent company.</description>
        <inlineHelpText>Name of Parent company.</inlineHelpText>
        <label>Company Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Phone__c</fullName>
        <description>Company HQ phone.</description>
        <inlineHelpText>Company HQ phone.</inlineHelpText>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Ranking__c</fullName>
        <description>Reported company rankings.</description>
        <inlineHelpText>Reported company rankings.</inlineHelpText>
        <label>Company Ranking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Revenue_Range__c</fullName>
        <description>Revenue range associated with Company.</description>
        <inlineHelpText>Revenue range associated with Company.</inlineHelpText>
        <label>Company Revenue Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Revenue__c</fullName>
        <description>Revenue associated with Company.</description>
        <inlineHelpText>Revenue associated with Company.</inlineHelpText>
        <label>Company Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zisf__Company_SIC_Codes__c</fullName>
        <description>List of SIC classification codes associated with company.</description>
        <inlineHelpText>List of SIC classification codes associated with company.</inlineHelpText>
        <label>Company SIC Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_State__c</fullName>
        <description>Company business state address.</description>
        <inlineHelpText>Company business state address.</inlineHelpText>
        <label>Company State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Street__c</fullName>
        <description>Company HQ street address.</description>
        <inlineHelpText>Company HQ street address.</inlineHelpText>
        <label>Company Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Ticker__c</fullName>
        <description>Stock Ticker for publicly traded companies.</description>
        <inlineHelpText>Stock Ticker for publicly traded companies.</inlineHelpText>
        <label>Company Ticker</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Ultimate_Parent_ID__c</fullName>
        <description>ZoomInfo ID for Ultimate Parent company.</description>
        <inlineHelpText>ZoomInfo ID for Ultimate Parent company.</inlineHelpText>
        <label>Company Ultimate Parent ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Ultimate_Parent_Name__c</fullName>
        <description>Name of Ultimate parent of company.</description>
        <inlineHelpText>Name of Ultimate parent of company.</inlineHelpText>
        <label>Company Ultimate Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Website__c</fullName>
        <description>Corporate website associated with Company.</description>
        <inlineHelpText>Corporate website associated with Company.</inlineHelpText>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zisf__Company_Zip_Code__c</fullName>
        <description>Company HQ Zip code.</description>
        <inlineHelpText>Company HQ Zip code.</inlineHelpText>
        <label>Company Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Confidence_Match_Score__c</fullName>
        <description>Numeric value for confidence match score.</description>
        <inlineHelpText>Numeric value for confidence match score (0-100).</inlineHelpText>
        <label>Confidence Match Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zisf__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated contact.</description>
        <inlineHelpText>Associated contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ZoomInfo</relationshipLabel>
        <relationshipName>ZoomInfo_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zisf__Email_Matches_Company_Name__c</fullName>
        <description>Indicates if ZoomInfo Recognizes a Match Between the Email Domain Input Value and Known Domains for the Company.</description>
        <inlineHelpText>Indicates if ZoomInfo Recognizes a Match Between the Email Domain Input Value and Known Domains for the Company.</inlineHelpText>
        <label>Email Matches Company Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Email_Matches_Person_Name__c</fullName>
        <description>Indicates if the Email Address Contains the Person&apos;s Full Name.</description>
        <inlineHelpText>Indicates if the Email Address Contains the Person&apos;s Full Name.</inlineHelpText>
        <label>Email Matches Person Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Email__c</fullName>
        <description>Person Business Email Address.</description>
        <inlineHelpText>Person Business Email Address.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zisf__First_Name__c</fullName>
        <description>First Name of Person.</description>
        <inlineHelpText>First Name of Person.</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Free_Email__c</fullName>
        <description>Indicates if ZoomInfo Recognizes an Email Address Input Value as Managed by a Free or Temporary Email Service Provider.</description>
        <inlineHelpText>Indicates if ZoomInfo Recognizes an Email Address Input Value as Managed by a Free or Temporary Email Service Provider.</inlineHelpText>
        <label>Free Email</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Generic_Email__c</fullName>
        <description>Indicates if ZoomInfo Recognizes Email Input Value as a Role Based Username.</description>
        <inlineHelpText>Indicates if ZoomInfo Recognizes Email Input Value as a Role Based Username.</inlineHelpText>
        <label>Generic Email</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Job_Function__c</fullName>
        <description>Person&apos;s organizational job function.</description>
        <inlineHelpText>Person&apos;s organizational job function.</inlineHelpText>
        <label>Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Job_Title__c</fullName>
        <description>Person current  job title.</description>
        <inlineHelpText>Person current  job title.</inlineHelpText>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Known_First_Name__c</fullName>
        <description>Indicates if ZoomInfo Recognizes a First Name Input Value as a Known First Name Using Multiple Sources Including the U.S. Census.</description>
        <inlineHelpText>Indicates if ZoomInfo Recognizes a First Name Input Value as a Known First Name Using Multiple Sources Including the U.S. Census.</inlineHelpText>
        <label>Known First Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Known_Full_Name__c</fullName>
        <description>Indicates if ZoomInfo Recognizes a First Name Input Value as a Known Full Name Using Multiple Sources Including the U.S. Census.</description>
        <inlineHelpText>Indicates if ZoomInfo Recognizes a First Name Input Value as a Known Full Name Using Multiple Sources Including the U.S. Census.</inlineHelpText>
        <label>Known Full Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Known_Last_Name__c</fullName>
        <description>Indicates if ZoomInfo Recognizes a First Name Input Value as a Known Last Name Using Multiple Sources Including the U.S. Census.</description>
        <inlineHelpText>Indicates if ZoomInfo Recognizes a First Name Input Value as a Known Last Name Using Multiple Sources Including the U.S. Census.</inlineHelpText>
        <label>Known Last Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Last_Name__c</fullName>
        <description>Last Name of Person.</description>
        <inlineHelpText>Last Name of Person.</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated lead.</description>
        <inlineHelpText>Associated lead.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ZoomInfo</relationshipLabel>
        <relationshipName>ZoomInfo_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zisf__Malformed_Email__c</fullName>
        <description>Indicates if ZoomInfo Recognizes and Email Address Input Value is Malformed and does not Follow the xyz@domain.com Syntax.</description>
        <inlineHelpText>Indicates if ZoomInfo Recognizes and Email Address Input Value is Malformed and does not Follow the xyz@domain.com Syntax.</inlineHelpText>
        <label>Malformed Email</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Management_Level__c</fullName>
        <description>Person&apos;s management level.</description>
        <inlineHelpText>Person&apos;s management level.</inlineHelpText>
        <label>Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Match_Inputs__c</fullName>
        <description>Values passed in to match to ZoomInfo data.</description>
        <inlineHelpText>Values passed in to match to ZoomInfo data.</inlineHelpText>
        <label>Match Inputs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zisf__Normalized_First_Name__c</fullName>
        <description>ZoomInfo Normalized First Name Based on Input Value.</description>
        <inlineHelpText>ZoomInfo Normalized First Name Based on Input Value.</inlineHelpText>
        <label>Normalized First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Normalized_Last_Name__c</fullName>
        <description>ZoomInfo Normalized Last Name Based on Input Value.</description>
        <inlineHelpText>ZoomInfo Normalized Last Name Based on Input Value.</inlineHelpText>
        <label>Normalized Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Person_City__c</fullName>
        <description>Person business city address.</description>
        <inlineHelpText>Person business city address.</inlineHelpText>
        <label>Person City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Country__c</fullName>
        <description>Person business country address.</description>
        <inlineHelpText>Person business country address.</inlineHelpText>
        <label>Person Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Direct_Phone__c</fullName>
        <label>Person Direct Phone</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Education__c</fullName>
        <description>Person educational history.</description>
        <inlineHelpText>Person educational history.</inlineHelpText>
        <label>Person Education</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Employment_History__c</fullName>
        <description>Person&apos;s employment history.</description>
        <inlineHelpText>Person&apos;s employment history.</inlineHelpText>
        <label>Person Employment History</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Gender__c</fullName>
        <label>Person Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Has_Moved__c</fullName>
        <description>Indicates ZoomInfo Recognizes the Person Company Input Value does not match ZoomInfo Current Company but does Match Known Employment History.</description>
        <inlineHelpText>Indicates ZoomInfo Recognizes the Person Company Input Value does not match ZoomInfo Current Company but does Match Known Employment History.</inlineHelpText>
        <label>Person Has Moved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Image_URL__c</fullName>
        <description>Person Image URL</description>
        <inlineHelpText>Person Image URL</inlineHelpText>
        <label>Person Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Looks_Like_EU__c</fullName>
        <description>Inferred Person European Union Geographic Region Designation.</description>
        <inlineHelpText>Inferred Person European Union Geographic Region Designation.</inlineHelpText>
        <label>Person Looks Like EU</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Phone__c</fullName>
        <description>Person Business Phone Number.</description>
        <inlineHelpText>Person Business Phone Number.</inlineHelpText>
        <label>Person Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zisf__Person_State__c</fullName>
        <description>Person business state address.</description>
        <inlineHelpText>Person business state address.</inlineHelpText>
        <label>Person State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Street__c</fullName>
        <description>Person business street address.</description>
        <inlineHelpText>Person business street address.</inlineHelpText>
        <label>Person Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Within_EU__c</fullName>
        <description>Denotes whether person is within EU, based on ZoomInfo person location. email and phone data.</description>
        <inlineHelpText>Denotes whether person is within EU, based on ZoomInfo person location. email and phone data.</inlineHelpText>
        <label>Person Within EU</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Person_Zip_Code__c</fullName>
        <description>Person business Zip code.</description>
        <inlineHelpText>Person business Zip code.</inlineHelpText>
        <label>Person Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Company_URL__c</fullName>
        <description>URL for ZoomInfo company profile.</description>
        <inlineHelpText>URL for ZoomInfo company profile.</inlineHelpText>
        <label>ZoomInfo Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Last_Verified_Date__c</fullName>
        <description>Date person record was last verified in ZoomInfo&apos;s database.</description>
        <inlineHelpText>Date person record was last verified in ZoomInfo&apos;s database.</inlineHelpText>
        <label>ZoomInfo Last Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Person_ID__c</fullName>
        <description>ZoomInfo unique identified for Person record.</description>
        <inlineHelpText>ZoomInfo ID for person record.</inlineHelpText>
        <label>ZoomInfo Person ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Person_URL__c</fullName>
        <description>URL for ZoomInfo person.</description>
        <inlineHelpText>Click to view ZoomInfo person profile.</inlineHelpText>
        <label>ZoomInfo Person URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Source2__c</fullName>
        <label>ZoomInfo Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clean</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Source__c</fullName>
        <label>ZoomInfo Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clean</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__Zoominfo_Company_ID__c</fullName>
        <description>ZoomInfo unique identified for Company.</description>
        <inlineHelpText>ZoomInfo unique identified for Company.</inlineHelpText>
        <label>Zoominfo Company ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>ZoomInfo</label>
    <listViews>
        <fullName>zisf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZoomInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoomInfo Records</pluralLabel>
    <recordTypes>
        <fullName>zisf__ZoomInfo_Company</fullName>
        <active>true</active>
        <description>Use for ZoomInfo Company records</description>
        <label>ZoomInfo Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>zisf__ZoomInfo_Person</fullName>
        <active>true</active>
        <description>Use for ZoomInfo Person records</description>
        <label>ZoomInfo Person</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>